--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,7 +20,7 @@
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon-32x32.ico" or "favicon-32x32.ico", "%PUBLIC_URL%/favicon-32x32.ico" will
+      Unlike "/favicon-31x32-32x32.ico" or "favicon-31x32-32x32.ico", "%PUBLIC_URL%/favicon-31x32-32x32.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
